// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render with a tooltip when passed a validation hint 1`] = `
.circuit-3 {
  position: relative;
}

.circuit-3:last-of-type {
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:hover + label::before {
  border-color: #333333;
}

.circuit-0:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:checked + label > svg {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3063E9;
}

.circuit-1 {
  color: #333333;
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

.circuit-1::before {
  height: 18px;
  width: 18px;
  box-sizing: border-box;
  box-shadow: 0;
  background-color: #FFF;
  border: 1px solid #999999;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out, background-color 120ms ease-in-out;
  transition: border 120ms ease-in-out, background-color 120ms ease-in-out;
}

.circuit-1 svg {
  height: 18px;
  width: 18px;
  padding: 2px;
  box-sizing: border-box;
  color: #3063E9;
  display: block;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  -webkit-transition: -webkit-transform 120ms ease-in-out, opacity 120ms ease-in-out;
  -webkit-transition: transform 120ms ease-in-out, opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out, opacity 120ms ease-in-out;
}

.circuit-2 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #000000;
  color: #FFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 40;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.07), 0 0 1px 0 rgba(12,15,20,0.07),0 2px 2px 0 rgba(12,15,20,0.07);
  left: 50%;
  left: calc(50% - (16px + 4px));
  bottom: 100%;
  bottom: calc(100% + 12px);
  left: -12px;
}

.circuit-2::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-2::after {
  left: 12px;
}

.circuit-2::after {
  top: 100%;
  border-top-color: #000000;
}

<div
  class="circuit-3"
>
  <input
    class="circuit-0"
    id="checkbox_5"
    name="name"
    type="checkbox"
    value=""
  />
  <label
    class="circuit-1"
    for="checkbox_5"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 8.79L6 13l8-9"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </label>
  <div
    class="circuit-2"
  >
    This field is required.
  </div>
</div>
`;

exports[`Checkbox should render with checked styles when passed the checked prop 1`] = `
.circuit-2 {
  position: relative;
}

.circuit-2:last-of-type {
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:hover + label::before {
  border-color: #333333;
}

.circuit-0:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:checked + label > svg {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3063E9;
}

.circuit-1 {
  color: #333333;
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

.circuit-1::before {
  height: 18px;
  width: 18px;
  box-sizing: border-box;
  box-shadow: 0;
  background-color: #FFF;
  border: 1px solid #999999;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out, background-color 120ms ease-in-out;
  transition: border 120ms ease-in-out, background-color 120ms ease-in-out;
}

.circuit-1 svg {
  height: 18px;
  width: 18px;
  padding: 2px;
  box-sizing: border-box;
  color: #3063E9;
  display: block;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  -webkit-transition: -webkit-transform 120ms ease-in-out, opacity 120ms ease-in-out;
  -webkit-transition: transform 120ms ease-in-out, opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out, opacity 120ms ease-in-out;
}

<div
  class="circuit-2"
>
  <input
    checked=""
    class="circuit-0"
    id="checkbox_2"
    name="name"
    type="checkbox"
    value=""
  />
  <label
    class="circuit-1"
    for="checkbox_2"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 8.79L6 13l8-9"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </label>
</div>
`;

exports[`Checkbox should render with default styles 1`] = `
.circuit-2 {
  position: relative;
}

.circuit-2:last-of-type {
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:hover + label::before {
  border-color: #333333;
}

.circuit-0:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:checked + label > svg {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3063E9;
}

.circuit-1 {
  color: #333333;
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

.circuit-1::before {
  height: 18px;
  width: 18px;
  box-sizing: border-box;
  box-shadow: 0;
  background-color: #FFF;
  border: 1px solid #999999;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out, background-color 120ms ease-in-out;
  transition: border 120ms ease-in-out, background-color 120ms ease-in-out;
}

.circuit-1 svg {
  height: 18px;
  width: 18px;
  padding: 2px;
  box-sizing: border-box;
  color: #3063E9;
  display: block;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  -webkit-transition: -webkit-transform 120ms ease-in-out, opacity 120ms ease-in-out;
  -webkit-transition: transform 120ms ease-in-out, opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out, opacity 120ms ease-in-out;
}

<div
  class="circuit-2"
>
  <input
    class="circuit-0"
    id="checkbox_1"
    name="name"
    type="checkbox"
    value=""
  />
  <label
    class="circuit-1"
    for="checkbox_1"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 8.79L6 13l8-9"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </label>
</div>
`;

exports[`Checkbox should render with disabled styles when passed the disabled prop 1`] = `
.circuit-2 {
  position: relative;
}

.circuit-2:last-of-type {
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:hover + label::before {
  border-color: #333333;
}

.circuit-0:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:checked + label > svg {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3063E9;
}

.circuit-1 {
  color: #333333;
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1::before {
  height: 18px;
  width: 18px;
  box-sizing: border-box;
  box-shadow: 0;
  background-color: #FFF;
  border: 1px solid #999999;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out, background-color 120ms ease-in-out;
  transition: border 120ms ease-in-out, background-color 120ms ease-in-out;
}

.circuit-1 svg {
  height: 18px;
  width: 18px;
  padding: 2px;
  box-sizing: border-box;
  color: #3063E9;
  display: block;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  -webkit-transition: -webkit-transform 120ms ease-in-out, opacity 120ms ease-in-out;
  -webkit-transition: transform 120ms ease-in-out, opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out, opacity 120ms ease-in-out;
}

.circuit-1::before {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  border-color: #333333;
  background-color: #F5F5F5;
}

.circuit-1 svg {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  color: #333333;
}

<div
  class="circuit-2"
>
  <input
    class="circuit-0"
    disabled=""
    id="checkbox_3"
    name="name"
    type="checkbox"
    value=""
  />
  <label
    class="circuit-1"
    disabled=""
    for="checkbox_3"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 8.79L6 13l8-9"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </label>
</div>
`;

exports[`Checkbox should render with invalid styles when passed the invalid prop 1`] = `
.circuit-2 {
  position: relative;
}

.circuit-2:last-of-type {
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:hover + label::before {
  border-color: #333333;
}

.circuit-0:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:checked + label > svg {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3063E9;
}

.circuit-0:hover + label::before {
  border-color: #B22426;
}

.circuit-0:checked + label::before {
  border-color: #D23F47;
}

.circuit-1 {
  color: #333333;
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

.circuit-1::before {
  height: 18px;
  width: 18px;
  box-sizing: border-box;
  box-shadow: 0;
  background-color: #FFF;
  border: 1px solid #999999;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out, background-color 120ms ease-in-out;
  transition: border 120ms ease-in-out, background-color 120ms ease-in-out;
}

.circuit-1 svg {
  height: 18px;
  width: 18px;
  padding: 2px;
  box-sizing: border-box;
  color: #3063E9;
  display: block;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  -webkit-transition: -webkit-transform 120ms ease-in-out, opacity 120ms ease-in-out;
  -webkit-transition: transform 120ms ease-in-out, opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out, opacity 120ms ease-in-out;
}

.circuit-1:not(:focus)::before {
  border-color: #D23F47;
  background-color: #F4CBCB;
}

.circuit-1:not(:focus) svg {
  color: #D23F47;
}

<div
  class="circuit-2"
>
  <input
    class="circuit-0"
    id="checkbox_4"
    name="name"
    type="checkbox"
    value=""
  />
  <label
    class="circuit-1"
    for="checkbox_4"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 8.79L6 13l8-9"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </label>
</div>
`;
